tests/diagnostics/catalog/snapshots/ir/IR0014.snap
error[IR0014]: IR_E_DUPLICATE_NAME
 --> tests/diagnostics/catalog/sources/ir/IR0014.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0014
  = help: keep IR validation diagnostics structured and catalog-backed
